fix(header): Align the navbar with the rest of the page

--- a/challenges/huddlepagealternate/src/css/layout/_header.css
+++ b/challenges/huddlepagealternate/src/css/layout/_header.css
@@ -12,7 +12,7 @@ header {
 }
 
 .header__navbar {
-  @apply w-11/12 max-w-screen-xl;
+  @apply w-full;
   @apply flex justify-between items-center gap-x-2;
 }
 
